#191 allow scanning of database schemas from the command line